--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -54,8 +54,8 @@
   </div>
 
 
-  <div fxFlex>
-	  <mat-list fxFlex>
+  <div fxFlex *ngIf="leaders">
+	  <mat-list>
       <h2>Corporate Leadership</h2>
 	    <mat-list-item *ngFor="let leader of leaders">
 	      <img matListAvatar src={{leader.image}} alt={{leader.name}}>
@@ -66,5 +66,8 @@
 	      </p>
 	    </mat-list-item>
 	  </mat-list>
+  </div>
+  <div [hidden]="leaders">
+    <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
   </div>
 </div>
