--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -44,9 +44,43 @@
       <p matLine>-- {{comment.author}} {{comment.date | date}}</p>
     </mat-list-item>
   </mat-list>
+    <mat-list *ngIf="feedbackForm.valid" >
+    <mat-list-item>
+      <p matLine> {{feedbackForm.value.comment}} </p>
+      <p matLine>{{feedbackForm.value.rating}} Stars</p>
+      <p matLine>-- {{feedbackForm.value.author}} </p>
+    </mat-list-item>
+  </mat-list>
+  <form novalidate [formGroup]="feedbackForm" #fform="ngForm" (ngSubmit)="onSubmit()">
+      <p>
+        <mat-form-field class="full-width">
+          <input matInput formControlName="author" placeholder="Author Name" type="text" required>
+         <mat-error *ngIf="formErrors.author">{{formErrors.author}}</mat-error> 
+        </mat-form-field>
+      </p>
+      <p>
+        <mat-slider matInput class="half-width"
+          thumbLabel
+          [displayWith]="formatLabel"
+          tickInterval="1"
+          min="1"
+          max="5"
+          value="5"
+          formControlName="rating">
+         </mat-slider>
+      </p>
+      <p>
+        <mat-form-field class="full-width">
+          <textarea matInput formControlName="comment" placeholder="Your Comment" rows=12></textarea>
+         <mat-error *ngIf="formErrors.comment">{{formErrors.comment}}</mat-error> 
+        </mat-form-field>
+      </p>
+      <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="feedbackForm.invalid">Submit</button>
+  </form>
   </div>
   <div [hidden]="dish">
     <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
   </div>
 
 </div>
+
