--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -58,7 +58,7 @@
 	  <mat-list>
       <h2>Corporate Leadership</h2>
 	    <mat-list-item *ngFor="let leader of leaders">
-	      <img matListAvatar src={{leader.image}} alt={{leader.name}}>
+	      <img matListAvatar src="{{BaseURL + leader.image}}" alt={{leader.name}}>
 	      <h1 matLine> {{leader.name}} {{leader.abbr}}</h1>
         <p matLine>{{leader.designation}}</p>
 	      <p matLine>
@@ -71,3 +71,4 @@
     <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
   </div>
 </div>
+  
