handling server error

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,8 +18,12 @@
     </p>
   </mat-card-content>
 </mat-card>
-  <div [hidden]="dish">
+  <div [hidden]="dish || DisherrMess">
     <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+  </div>
+  <div fxFlex *ngIf="DisherrMess ">
+    <h2>Error</h2>
+    <h4>{{DisherrMess}}</h4>
   </div>
 
 <mat-card *ngIf="promotion" fxFlex>
@@ -35,8 +39,12 @@
     </p>
   </mat-card-content>
 </mat-card>
-  <div [hidden]="promotion">
+  <div [hidden]="promotion || PromotionerrMess">
     <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+  </div>
+  <div fxFlex *ngIf="PromotionerrMess">
+    <h2>Error</h2>
+    <h4>{{PromotionerrMess}}</h4>
   </div>
 
 <mat-card *ngIf="leader" fxFlex>
@@ -52,8 +60,12 @@
     </p>
   </mat-card-content>
 </mat-card>
-  <div [hidden]="leader">
+  <div [hidden]="leader || LeadererrMess">
     <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+  </div>
+  <div fxFlex *ngIf="LeadererrMess">
+    <h2>Error</h2>
+    <h4>{{LeadererrMess}}</h4>
   </div>
 
 </div>
